--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body >
-    <div ng-app="unicornSiteManager" ng-class="{loading:loadingView}">
+    <div ng-app="unicornSiteManager" ng-class="{loading:loadingView}" ng-strict-di>
         <ng-include src="'client/views/index.ng.html'" ng-controller="MainCtrl"></ng-include>
     </div>
 </body>
